# audio-transcription-service

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: db.py  db_setup.py  dependencies_setup.py  filename_service.py  main.py  models.py  transcription_repository.py  transcription_service.py  trascription_service.py
backend/backend/domain/: common_types.py  filename_service.py  generate_filename.py  trascription_service.py
backend/tests/: audio_file_service_test.py  filename_service_test.py  transcription_service_test.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  configurations.ts  data-access.ts  main.tsx
frontend/src/components/: audio-submission-form.tsx  data-table.tsx  loading-overlay.tsx  transcriptions-listing.tsx
frontend/src/contexts/: loading-context.tsx  loading-provider.tsx
frontend/src/domain/transcriptions/: audio-submission-form.tsx  data-access.ts  transcriptions-columns.tsx  transcriptions-listing.test.tsx  transcriptions-listing.tsx
frontend/src/pages/: layout.tsx  not-found.tsx  transcription-dashboard.tsx
