[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["William Goh <wirriamm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
sqlmodel = "^0.0.24"
transformers = {extras = ["torch"], version = "^4.49.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
